game_scheduling_test_output.txt

> squad-logic@1.0.0 test
> node --test tests/gameScheduling.test.js

file:///C:/Users/joel.abraham/GotSportTeamerScheduler/SquadLogic/src/gameScheduling.js:216
import { validateSlot, validateTeam } from './utils/validation.js';
         ^^^^^^^^^^^^

SyntaxError: Identifier 'validateSlot' has already been declared
    at compileSourceTextModule (node:internal/modules/esm/utils:317:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:111:18)
    at #translate (node:internal/modules/esm/loader:541:20)
    at afterLoad (node:internal/modules/esm/loader:594:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:599:12)
    at #createModuleJob (node:internal/modules/esm/loader:623:36)
    at #getJobFromResolveResult (node:internal/modules/esm/loader:329:34)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:294:41)

Node.js v24.11.1
Γ£û tests\gameScheduling.test.js (65.461ms)
Γä╣ tests 1
Γä╣ suites 0
Γä╣ pass 0
Γä╣ fail 1
Γä╣ cancelled 0
Γä╣ skipped 0
Γä╣ todo 0
Γä╣ duration_ms 73.238

Γ£û failing tests:

test at tests\gameScheduling.test.js:1:1
Γ£û tests\gameScheduling.test.js (65.461ms)
  'test failed'
